@@ -10,5 +10,7 @@
 #include <zeep/http/reply.hpp>
 #include <zeep/http/message-parser.hpp>
 
+#include <cstdint>
+
 zeep::http::reply simple_request(uint16_t port, const std::string& req);
 zeep::http::reply simple_request(uint16_t port, const zeep::http::request& req);
