@@ -1,6 +1,7 @@
 Version 6.0.4
 - Fix message parser to accept HTTP messages without a
   content-length but with a content-type header.
+- Include <cstdint> at more locations
 
 Version 6.0.3
 - Fixes in login controller logic. Again.
